# dynamic-matrix

./: CMakeLists.txt
src/: CMakeLists.txt  MathUtils.cpp  MathUtils.hpp  Matriz.hpp
tests/: BasicOperations_t.cpp  CMakeLists.txt  MathUtils_t.cpp
