set(DYNAMIC_MATRIX_TARGET_NAME ${PROJECT_NAME})

add_library(${DYNAMIC_MATRIX_TARGET_NAME} STATIC MathUtils.cpp)
add_library(${DYNAMIC_MATRIX_TARGET_NAME}::${DYNAMIC_MATRIX_TARGET_NAME} ALIAS ${DYNAMIC_MATRIX_TARGET_NAME})

target_compile_features(${DYNAMIC_MATRIX_TARGET_NAME} INTERFACE cxx_std_20)
target_include_directories(${DYNAMIC_MATRIX_TARGET_NAME} INTERFACE
  $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/>)